# docsend

./: .gitignore  pyproject.toml  readme.md
docsend/: __init__.py  cli.py  docsend.py
